# dllib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dllib/: layers.py  model.py  optimizers.py  tensors.py
dllib/metrics/: classification.py  loss.py  regression.py
dllib/utils/: data.py  math.py
examples/: backend.py  classification.ipynb  regression.ipynb
tests/: test_dllib.py
