[tool.poetry]
name = "dllib"
version = "0.1.0"
description = ""
authors = ["Martin Kuchynka <kuchynkm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.15.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
