[tool.poetry]
name = "dllib"
version = "0.1.0"
description = ""
authors = ["Martin Kuchynka <kuchynkm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.15.3"
pre-commit = "^2.20.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
